depends_core/src/macros/leaf/snapshots/depends_core__macros__leaf__derive__tests__leaf.snap
---
source: depends_core/src/macros/leaf/derive.rs
assertion_line: 126
expression: format_source(derive_leaf(input).to_string().as_str())
---
impl ::depends::core::Named for Foo {
    fn name() -> &'static str {
        "Foo"
    }
}
impl Foo {
    pub fn into_leaf(self) -> ::std::sync::Arc<::depends::core::LeafNode<Self>> {
        ::depends::core::LeafNode::new(self)
    }
}
impl ::depends::core::HashValue for Foo {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}
impl ::depends::core::Clean for Foo {
    fn clean(&mut self) {}
}

